fea-rs/test-data/compile-tests/mini-latin/bad/chain_subst_references_gpos_lookup.fea
lookup dummy {
    pos a 1;
} dummy;

feature test {
    sub a' lookup dummy b;
} test;
